# ChangeLog for dev-perl/NetPacket
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetPacket/ChangeLog,v 1.53 2013/09/13 05:38:51 patrick Exp $

*NetPacket-1.400.100 (13 Sep 2013)

  13 Sep 2013; Patrick Lauer <patrick@gentoo.org> +NetPacket-1.400.100.ebuild:
  Bump

*NetPacket-1.3.3 (25 Aug 2013)

  25 Aug 2013; Patrick Lauer <patrick@gentoo.org> +NetPacket-1.3.3.ebuild:
  Bump

  02 Sep 2012; Torsten Veller <tove@gentoo.org> -NetPacket-1.3.0.ebuild:
  Cleanup

  09 Aug 2012; Brent Baude <ranger@gentoo.org> NetPacket-1.3.1.ebuild:
  Marking NetPacket-1.3.1 ppc for bug 418831

  05 Aug 2012; Johannes Huber <johu@gentoo.org> NetPacket-1.3.1.ebuild:
  Stable for x86, wrt bug #418831

  03 Aug 2012; Agostino Sarubbo <ago@gentoo.org> NetPacket-1.3.1.ebuild:
  Stable for amd64, wrt bug #418831

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  21 Apr 2012; Torsten Veller <tove@gentoo.org> -NetPacket-0.43.0.ebuild,
  -NetPacket-1.2.0.ebuild:
  Cleanup

  16 Apr 2012; Brent Baude <ranger@gentoo.org> NetPacket-1.3.0.ebuild:
  Marking NetPacket-1.3.0 ppc for bug 404685

  05 Apr 2012; Jeff Horelick <jdhore@gentoo.org> NetPacket-1.3.0.ebuild:
  marked x86 per bug 404685

  01 Apr 2012; Raúl Porcel <armin76@gentoo.org> NetPacket-0.43.0.ebuild,
  NetPacket-1.2.0.ebuild, NetPacket-1.3.0.ebuild, NetPacket-1.3.1.ebuild:
  Drop ia64/sparc keywords

  28 Mar 2012; Agostino Sarubbo <ago@gentoo.org> NetPacket-1.3.0.ebuild:
  Stable for amd64, wrt bug #404685

*NetPacket-1.3.1 (29 Feb 2012)

  29 Feb 2012; Robin H. Johnson <robbat2@gentoo.org> +NetPacket-1.3.1.ebuild:
  Version bump via perl-bump experimental tool.

*NetPacket-1.3.0 (18 Nov 2011)

  18 Nov 2011; Torsten Veller <tove@gentoo.org> +NetPacket-1.3.0.ebuild:
  Version bump

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -NetPacket-1.1.1.ebuild:
  Cleanup

*NetPacket-1.2.0 (02 Sep 2011)
