@@ -1,8 +1,28 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST NetPacket-1.3.1.tar.gz 28155 SHA256 c2cf197e165c601ffbdebb967919dc379c5ff051bcb1425a0c1b092882cc94a5 SHA512 3d0e8828de4ab5eaf30fab698abd68f5627d188e1fdcde27c28bccc2079fa1f1b4e805a6482ef62a8c9861bb055b7efef38e480539fff379c0abb0578c74ccf3 WHIRLPOOL a5a5d60fe5b7acea8a520eb62e956e0ea1537e3284fbac4741382dd4d1eb01b1ba39abf6cb29f21720962e59a070b0b26d0e643f6a388b7238df41fa5e564419
 DIST NetPacket-1.3.3.tar.gz 27157 SHA256 973729c69486bd67540f329f91b808cb0bda02e065f043c0693b16d6945dece6 SHA512 eb9c7bb111d87aabf9dccc6a8bd0734755f9665d0e0b316c1b61ebae93aae5a67a6e427476fe1d9e53905bb33d657affe5205b0812fd23f0f785ba2536ed43eb WHIRLPOOL 6148c47c3ddd58166e8aca21b9497c5ece9bf1bd415128a6e3f47b137eec3da7e581e6b7087e950b0c90b2e86349e624a291481d1a238d0469971093a08fa130
 DIST NetPacket-1.4.1.tar.gz 30478 SHA256 44954d23446130f52152f3462dfd272ca1c9130afd3fd8dbb490a34ac3f7ae78 SHA512 c3cae0f9cd0d36896c986398ebb169457995d043af5bd32b25c8a359fb527e2ec1a4279dd9f9747d39d977e2581acaa18f74d95d58cbc3ad3468bbf159d16da8 WHIRLPOOL 3d9406cda96d5f3f1d43578424707c6843f166640daebdb90dcbdcede968384d28f0a4a2a6029aa42af5a8410e814e34bd2a37cc8190c1e282edd60496a67b7d
 EBUILD NetPacket-1.3.1.ebuild 548 SHA256 d6ba886e968fa5c8bbf2a6412d5e010f7595f9742cf5dc86bc55b4096ea9a18f SHA512 e955f01dac8fcf2c89469684e20ffad6a42bd5a5e1ca90d7ff53780b768136193d64a83e57de3b2fb0928d4b9aaf9b105dac844d72c2035a03f83b41a6a60037 WHIRLPOOL 456ef125f5fd9bd846347b4cd40ac511b00b154f812e373d9a00a280d562923898dd8e07ab47827213c7e6201479205db83f135f5f29b4a013bade05ea195759
 EBUILD NetPacket-1.3.3.ebuild 552 SHA256 6e6d63c165978d15cbb654d511c133ff51cf04590e0963ed2e473efdb643ffa1 SHA512 7a2774bd506e023a74addaf542a8513087e3d910944b497b4077a66496aada94e7c741610bf861b1245f789a4f91f83e49753ad22ac0826f23a28710e13ea88c WHIRLPOOL 9ee8e5106096efb0b39220c33696067b53db3b21b40b95d79839905e87584fb9ed50836b9826f13e1701eb1253ed5de990b014f0749ab709bdab8ef3c4ce5b1f
-EBUILD NetPacket-1.400.100.ebuild 556 SHA256 2bf60afc0862ce322d0aa81c309ce80d380873b64812a566afdebbb0620d879f SHA512 b3fad2130e832f8e22c34b8d32d53cb873e6e56cb8589fac37491a973fea0a302401094efe35033105ce3dc71eb97fd046a00e729a18bef41869225a50e4ad65 WHIRLPOOL aa83d02c42a3a401c18be0b3185c0eb19094882ca590471b610527430ce7f0b0f6d7c097a81dbeb87bec9b12654fd4ecbea651c371e30be7932ea0ae2b995ece
-MISC ChangeLog 6143 SHA256 a871c1fe16a811b7c48c254c02b0029d76b06f98efc8d5a670f274973127dc8c SHA512 c68ecc7793191d307241a422f845fa33bef2a7543979e8fdd13862bc7e8fcdcf40979bc3165f8adf3c6543011716dd904c309d3aad99fe413d2726ef1c0a4004 WHIRLPOOL efc1bb70ef03aae267beaeff27634ebf24ba78e5f1bb77a1c39af14367e04c18deb9151d0738cf4919b7e07f156809fd5e773be6ff3ca3dfcb7274584069333c
+EBUILD NetPacket-1.400.100.ebuild 558 SHA256 9d331d16f8dcc3630fceeef58d68831c29a46685e051a4a3b911b6d4e5efcf87 SHA512 12063e28be85fb0aceccb0e8c2adc3405c66e6c6e4264d169bef61ccb5b97c25e3738487d24593a97e45112758ab6c6c90851e4867862a700005c7117d5ac8dc WHIRLPOOL fc275425c6e5b3fdc6f1624066d2366934e30b9b5305592a63cd7cc148f092103dcaa765af3cf93318467d5a6d228cc2cec01451d28aa65ecbd2ecd2fc3d607a
+MISC ChangeLog 6261 SHA256 38e5988f016bd8793c37cad2373f12bbff1bceb5e2ab8fcca6f40a5427f4d798 SHA512 2e60932363de4d5a7ebf3dceab1dbf082bb0aef1d88c5e47f82a7de2b31d077abffbda9fd8703af1fd496eae796b4726a37ab744152a43693e3b8963f214d18a WHIRLPOOL 68abead3e8a1f0ff129cd0a50020d015cb10aae70099925521c8fdc4b265ae2b2368e854f52b199b5431432b1adc72b46a586a18b7a395de0db29b6ae5bf8268
 MISC metadata.xml 724 SHA256 bae19fc45e5efff8fc4f16afa8aba9cea8915506849ee5c016b7544915d05e88 SHA512 c0916e95d0852548c4afb9a6f0716ca07d4ac5d1a07c507de9e41b4cef760316d72a69344de0037062531b9bef3275de109f15bba250a7d8670b3563d77ee9fb WHIRLPOOL 85c4b922a43263ccb154cbb6427dbe6190980a2c26b7c4c3118a7a7905617545a71a3947844adc3130096a85f9622533961f61fb6488c90f9fc7a1f37deef2b1
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQIcBAEBCAAGBQJTCpdEAAoJEE8aJVXqcZkdi5gQAIzUzDxxRjpVf3dEt45pkade
+6DIODGh6VlRwT6EOq0Q8mnRv7yeNmqZH7LV08wn3iR6vuIPo18krEfsL7d77Dqg1
+NGIamj1AUXHmsxdSinv0XId4jwNyiwr8muVQKw4MDjZVAijqvDhr1Cp2ohnELHjV
+GE8rTUjX0tEKLhGJpHY814fwd8Lv9+SOLxHFjmbzfSuNKEW8OgQkujWXC8VVzUwh
+99n2R7ecWnUFL20/FQSgb7psPMM3Qz+TUL0LLCu0FXl3rHhf7RrXhMlsO0QK9dF+
+oyQiKooWyEZW1yCdCPbRNtO++dPul8PNIkPgdv28PDM/fd9yYj8h0jmn03Tz8Isw
+X6Y0dMFUMk6P3EVn+gNqhgz0o3KiPw1FEP0tuFa40a70m6hP2eahKRpttly3dvhw
+Od98WvWyJAl0jdCHfG4dRW51MluiuklXb8EibINbdRQkYgnSpwEVd2fUfZo9ZUyZ
+6nzjlW8/ZYt/L4K+y82SAF94G+ZHysVkqu0hBOKT3W1pMq6WJGnol53LYO3kKNBh
+v0pMbCy4cHzXlz6IyJ6uQizldAiHKOTu7cOa22hn0W1cs59GXGwWN5/L6DK/qLap
+Yx6n833j1Sg1nuyLgezUYjgh6HFJnxEwXnA4zx5Z6QWEtRI1BLxPYC4wcq5cMN+9
+NJOnLA/g4Ms+GzC2cQHf
+=QqqH
+-----END PGP SIGNATURE-----
