@@ -1,6 +1,6 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetPacket/NetPacket-1.400.100.ebuild,v 1.1 2013/09/13 05:38:51 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetPacket/NetPacket-1.400.100.ebuild,v 1.2 2014/02/24 01:50:07 phajdan.jr Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ DESCRIPTION="Perl NetPacket - network packets assembly/disassembly"
 
 LICENSE="Artistic-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86"
+KEYWORDS="~amd64 ~ppc x86"
 IUSE="test"
 
 RDEPEND=""
