@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/NetPacket
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetPacket/ChangeLog,v 1.53 2013/09/13 05:38:51 patrick Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/NetPacket/ChangeLog,v 1.54 2014/02/24 01:50:07 phajdan.jr Exp $
+
+  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  NetPacket-1.400.100.ebuild:
+  x86 stable wrt bug #495436
 
 *NetPacket-1.400.100 (13 Sep 2013)
 
